--- a/src/main/resources/templates/recuperar-senha.html
+++ b/src/main/resources/templates/recuperar-senha.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Import Google Icon Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.index.css" media="screen,projection" />
     <style>
         body {
             background-color: #f0f8ff;
